Regression: Sample Curve node Factor glitch in "All Curves" mode #102358

Closed
opened 2022-11-08 16:31:40 +01:00 by 炎臻 · 6 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.47

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-08 01:18, hash: fddcdcc20c
Worked: 3.3.1

Short description of error
In Sample Curve node's Factor mode with All Curves checked, the sampled values isn't continuous (glitch).
0001-0574.mp4

Exact steps for others to reproduce the error

  • Here is the file used in the video above:
    Sample Curve Factor bug.blend
  • Within the file, mainly a curve object is created with a few splines in it and a geometry nodes setup.An additional mesh object is created to help visualize the paths of splines.
  • In the GN setup, Sample Curve node with All Curves checked is used to retrive Position data of the splines based on the Factor value.
  • Then a cube primitive is created and its position is set by using the position data retrived through Sample Curve node.
  • By draging the Factor value, as in the video, the cube moves smoothly down the path and from spline to spline in 3.3.1 but glithes and discontinuances appear in 3.5 and 3.4.
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.47 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-08 01:18, hash: `fddcdcc20c` Worked: 3.3.1 **Short description of error** In **Sample Curve** node's **Factor** mode with **All Curves** checked, the sampled values isn't continuous (glitch). [0001-0574.mp4](https://archive.blender.org/developer/F13868859/0001-0574.mp4) **Exact steps for others to reproduce the error** - Here is the file used in the video above: [Sample Curve Factor bug.blend](https://archive.blender.org/developer/F13868860/Sample_Curve_Factor_bug.blend) - Within the file, mainly a curve object is created with a few splines in it and a geometry nodes setup.An additional mesh object is created to help visualize the paths of splines. - In the GN setup, **Sample Curve** node with **All Curves** checked is used to retrive Position data of the splines based on the **Factor** value. - Then a cube primitive is created and its position is set by using the position data retrived through **Sample Curve** node. - By draging the **Factor** value, as in the video, the cube moves smoothly down the path and from spline to spline in 3.3.1 but glithes and discontinuances appear in 3.5 and 3.4.
Author

Added subscriber: @PrettyFireNOI7

Added subscriber: @PrettyFireNOI7

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Iliya Katushenock changed title from Sample Curve node Factor glitch in "All Curves" mode to Regression: Sample Curve node Factor glitch in "All Curves" mode 2022-11-08 17:38:05 +01:00
Member

Thanks for the report! Fix incoming.

Thanks for the report! Fix incoming.
Hans Goudey self-assigned this 2022-11-08 20:09:39 +01:00

This issue was referenced by da41f11a29

This issue was referenced by da41f11a290d9641fed4e73e140fda33a803d391
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102358
No description provided.